--- a/Site/conteudo.html
+++ b/Site/conteudo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="estilo.css">
 	<link rel="stylesheet" href="responsivo.css">
 </head>
-<body>
+<body style="margin-inline: 150px">
 
 		<header>
 			<div id="imagem">
